--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,8 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --width: 300px;
+    --height: 300px;
   }
 
   .dark {
@@ -34,5 +36,25 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+  }
+}
+
+.before:before {
+  content: "";
+  position: absolute;
+  bottom: 50%;
+  right: 50%;
+  transform: translate(50%, 50%);
+  width: calc(var(--width) * 1); /* Fixed width */
+  height: calc(var(--height) * 1);
+  border: 4px solid white; /* Fixed height */
+  border-radius: 80%;
+  box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 768px) {
+  .before:before {
+    width: calc(var(--width) * 1.8); /* Fixed width */
+    height: calc(var(--height) * 1.8); /* Fixed height */
   }
 }
