--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,11 @@ body {
   box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.8);
 }
 
+.scrollbar-none {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 @media (min-width: 768px) {
   .before:before {
     width: calc(var(--width) * 1.8); /* Fixed width */
